# ik_llama.cpp

.github/actions/windows-setup-cuda/: action.yml
.github/workflows/: build.yml  release.yml
examples/quantize/: quantize.cpp
ggml/: CMakeLists.txt
ggml/include/: ggml.h
ggml/src/: CMakeLists.txt  ggml-quants.c  ggml.c
ggml/src/ggml-cuda/: mmq.cuh  mmq_id.cu  quantize_id.cu  topk-moe.cu
ggml/src/iqk/: iqk_quantize.cpp
include/: llama.h
src/: llama-model-loader.cpp  llama-model-loader.h  llama-quantize.cpp  llama.cpp
