# ggml/src/CMakeLists.txt
#
# CMake configuration for the ggml sources and backends.
#
# NOTE: This file is intended to be included/used by the top-level project
# and contains logic to build ggml-base (core), ggml-cpu backend, ggml-cuda backend,
# and a top-level ggml "glue" library that exposes registration symbols.
#
# This variant contains fixes to:
#  - Link ggml-cpu against the static core to resolve data implementation symbols
#    (eg. ggml_table_f32_f16).
#  - Link ggml-cuda against the shared core (to avoid creating enormous DLLs on Windows).
#  - Robust CUDA toolchain detection: when CUDA::cublas (imported target) is not present,
#    find libraries/headers and link by path so CMake generation does not fail.
#
# Keep comments and behavior consistent with upstream.
#

cmake_minimum_required(VERSION 3.18) # chosen to support CUDA handling used here
project(ggml-src LANGUAGES C CXX)

include(CheckCXXCompilerFlag)

unset(GGML_CDEF_PUBLIC)

add_compile_definitions(GGML_SCHED_MAX_COPIES=${GGML_SCHED_MAX_COPIES})
if (GGML_MAX_CONTEXTS)
    add_compile_definitions(GGML_MAX_CONTEXTS=${GGML_MAX_CONTEXTS})
endif()

# enable libstdc++ assertions for debug builds
if (CMAKE_SYSTEM_NAME MATCHES "Linux")
    add_compile_definitions($<$<CONFIG:Debug>:_GLIBCXX_ASSERTIONS>)
endif()

if (NOT MSVC)
    if (GGML_SANITIZE_THREAD)
        add_compile_options(-fsanitize=thread)
        link_libraries     (-fsanitize=thread)
    endif()

    if (GGML_SANITIZE_ADDRESS)
        add_compile_options(-fsanitize=address -fno-omit-frame-pointer)
        link_libraries     (-fsanitize=address)
    endif()

    if (GGML_SANITIZE_UNDEFINED)
        add_compile_options(-fsanitize=undefined)
        link_libraries     (-fsanitize=undefined)
    endif()
endif()

if (APPLE AND GGML_ACCELERATE)
    find_library(ACCELERATE_FRAMEWORK Accelerate)
    if (ACCELERATE_FRAMEWORK)
        message(STATUS "Accelerate framework found")

        add_compile_definitions(GGML_USE_ACCELERATE)
        add_compile_definitions(ACCELERATE_NEW_LAPACK)
        add_compile_definitions(ACCELERATE_LAPACK_ILP64)

        set(GGML_EXTRA_LIBS ${GGML_EXTRA_LIBS} ${ACCELERATE_FRAMEWORK})
    else()
        message(WARNING "Accelerate framework not found")
    endif()
endif()

if (GGML_METAL)
    find_library(FOUNDATION_LIBRARY Foundation REQUIRED)
    find_library(METAL_FRAMEWORK    Metal      REQUIRED)
    find_library(METALKIT_FRAMEWORK MetalKit   REQUIRED)

    message(STATUS "Metal framework found")
    set(GGML_HEADERS_METAL ../include/ggml-metal.h)
    set(GGML_SOURCES_METAL ggml-metal.m)

    list(APPEND GGML_CDEF_PUBLIC GGML_USE_METAL)
    if (GGML_METAL_NDEBUG)
        add_compile_definitions(GGML_METAL_NDEBUG)
    endif()

    # copy ggml-common.h and ggml-metal.metal to bin directory
    configure_file(ggml-common.h    ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/ggml-common.h    COPYONLY)
    configure_file(ggml-metal.metal ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/ggml-metal.metal COPYONLY)

    if (GGML_METAL_EMBED_LIBRARY)
        enable_language(ASM)

        add_compile_definitions(GGML_METAL_EMBED_LIBRARY)

        set(METALLIB_COMMON "${CMAKE_CURRENT_SOURCE_DIR}/ggml-common.h")
        set(METALLIB_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/ggml-metal.metal")

        file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/autogenerated")

        # merge ggml-common.h and ggml-metal.metal into a single file
        set(METALLIB_EMBED_ASM    "${CMAKE_BINARY_DIR}/autogenerated/ggml-metal-embed.s")
        set(METALLIB_SOURCE_EMBED "${CMAKE_BINARY_DIR}/autogenerated/ggml-metal-embed.metal")

        add_custom_command(
            OUTPUT ${METALLIB_EMBED_ASM}
            COMMAND echo "Embedding Metal library"
            COMMAND sed -e '/\#include \"ggml-common.h\"/r ${METALLIB_COMMON}' -e '/\#include \"ggml-common.h\"/d' < ${METALLIB_SOURCE} > ${METALLIB_SOURCE_EMBED}
            COMMAND echo ".section __DATA,__ggml_metallib"          >  ${METALLIB_EMBED_ASM}
            COMMAND echo ".globl _ggml_metallib_start"              >> ${METALLIB_EMBED_ASM}
            COMMAND echo "_ggml_metallib_start:"                    >> ${METALLIB_EMBED_ASM}
            COMMAND echo ".incbin \\\"${METALLIB_SOURCE_EMBED}\\\"" >> ${METALLIB_EMBED_ASM}
            COMMAND echo ".globl _ggml_metallib_end"                >> ${METALLIB_EMBED_ASM}
            COMMAND echo "_ggml_metallib_end:"                      >> ${METALLIB_EMBED_ASM}
            DEPENDS ggml-metal.metal ggml-common.h
            COMMENT "Generate assembly for embedded Metal library"
        )

        set(GGML_SOURCES_METAL ${GGML_SOURCES_METAL} ${METALLIB_EMBED_ASM})
    else()
        if (GGML_METAL_SHADER_DEBUG)
            set(XC_FLAGS -fno-fast-math -fno-inline -g)
        else()
            set(XC_FLAGS -O3)
        endif()

        if (GGML_METAL_MACOSX_VERSION_MIN)
            message(STATUS "Adding  -mmacosx-version-min=${GGML_METAL_MACOSX_VERSION_MIN} flag to metal compilation")
            list   (APPEND XC_FLAGS -mmacosx-version-min=${GGML_METAL_MACOSX_VERSION_MIN})
        endif()

        if (GGML_METAL_STD)
            message(STATUS "Adding  -std=${GGML_METAL_STD} flag to metal compilation")
            list   (APPEND XC_FLAGS -std=${GGML_METAL_STD})
        endif()

        add_custom_command(
            OUTPUT ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/default.metallib
            COMMAND xcrun -sdk macosx metal    ${XC_FLAGS} -c ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/ggml-metal.metal -o ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/ggml-metal.air
            COMMAND xcrun -sdk macosx metallib                ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/ggml-metal.air   -o ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/default.metallib
            COMMAND rm -f ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/ggml-metal.air
            COMMAND rm -f ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/ggml-common.h
            COMMAND rm -f ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/ggml-metal.metal
            DEPENDS ggml-metal.metal ggml-common.h
            COMMENT "Compiling Metal kernels"
            )

        add_custom_target(
            ggml-metal ALL
            DEPENDS ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/default.metallib
            )
    endif() # GGML_METAL_EMBED_LIBRARY

    set(GGML_EXTRA_LIBS ${GGML_EXTRA_LIBS}
        ${FOUNDATION_LIBRARY}
        ${METAL_FRAMEWORK}
        ${METALKIT_FRAMEWORK}
        )
endif()

if (GGML_MUSA)
    set(CMAKE_C_COMPILER clang)
    set(CMAKE_C_EXTENSIONS OFF)
    set(CMAKE_CXX_COMPILER clang++)
    set(CMAKE_CXX_EXTENSIONS OFF)

    set(GGML_CUDA ON)

    list(APPEND GGML_CDEF_PUBLIC GGML_USE_MUSA)
endif()

if (GGML_OPENMP)
    find_package(OpenMP)
    if (OpenMP_FOUND)
        message(STATUS "OpenMP found")

        add_compile_definitions(GGML_USE_OPENMP)

        set(GGML_EXTRA_LIBS ${GGML_EXTRA_LIBS} OpenMP::OpenMP_C OpenMP::OpenMP_CXX)

        if (GGML_MUSA)
            set(GGML_EXTRA_INCLUDES ${GGML_EXTRA_INCLUDES} "/usr/lib/llvm-10/include/openmp")
            set(GGML_EXTRA_LIBS ${GGML_EXTRA_LIBS} "/usr/lib/llvm-10/lib/libomp.so")
        endif()
    else()
        message(WARNING "OpenMP not found")
    endif()
endif()

if (GGML_BLAS)
    if (GGML_STATIC)
        set(BLA_STATIC ON)
    endif()

    set(BLA_VENDOR ${GGML_BLAS_VENDOR})
    find_package(BLAS)

    if (BLAS_FOUND)
        message(STATUS "BLAS found, Libraries: ${BLAS_LIBRARIES}")

        if (("${BLAS_INCLUDE_DIRS}" STREQUAL "") AND NOT (${GGML_BLAS_VENDOR} MATCHES "Apple"))
            find_package(PkgConfig REQUIRED)
            if (${GGML_BLAS_VENDOR} MATCHES "Generic")
                pkg_check_modules(DepBLAS REQUIRED blas)
            elseif (${GGML_BLAS_VENDOR} MATCHES "OpenBLAS")
                pkg_check_modules(DepBLAS openblas64)
                if (NOT DepBLAS_FOUND)
                    pkg_check_modules(DepBLAS REQUIRED openblas)
                endif()
            elseif (${GGML_BLAS_VENDOR} MATCHES "FLAME")
                pkg_check_modules(DepBLAS REQUIRED blis)
            elseif (${GGML_BLAS_VENDOR} MATCHES "ATLAS")
                pkg_check_modules(DepBLAS REQUIRED blas-atlas)
            elseif (${GGML_BLAS_VENDOR} MATCHES "FlexiBLAS")
                pkg_check_modules(DepBLAS REQUIRED flexiblas_api)
            elseif (${GGML_BLAS_VENDOR} MATCHES "Intel")
                pkg_check_modules(DepBLAS REQUIRED mkl-sdl)
            elseif (${GGML_BLAS_VENDOR} MATCHES "NVHPC")
                if ("${NVHPC_VERSION}" STREQUAL "")
                    message(WARNING "Better to set NVHPC_VERSION")
                else()
                    set(DepBLAS_FOUND ON)
                    set(DepBLAS_INCLUDE_DIRS "/opt/nvidia/hpc_sdk/${CMAKE_SYSTEM_NAME}_${CMAKE_SYSTEM_PROCESSOR}/${NVHPC_VERSION}/math_libs/include")
                endif()
            endif()
            if (DepBLAS_FOUND)
                set(BLAS_INCLUDE_DIRS ${DepBLAS_INCLUDE_DIRS})
            else()
                message(WARNING "BLAS_INCLUDE_DIRS neither been provided nor been automatically"
                " detected by pkgconfig, trying to find cblas.h from possible paths...")
                find_path(BLAS_INCLUDE_DIRS
                    NAMES cblas.h
                    HINTS
                        /usr/include
                        /usr/local/include
                        /usr/include/openblas
                        /opt/homebrew/opt/openblas/include
                        /usr/local/opt/openblas/include
                        /usr/include/x86_64-linux-gnu/openblas/include
                )
            endif()
        endif()

        message(STATUS "BLAS found, Includes: ${BLAS_INCLUDE_DIRS}")

        add_compile_options(${BLAS_LINKER_FLAGS})

        list(APPEND GGML_CDEF_PUBLIC GGML_USE_BLAS)

        if (${BLAS_INCLUDE_DIRS} MATCHES "mkl" AND (${GGML_BLAS_VENDOR} MATCHES "Generic" OR ${GGML_BLAS_VENDOR} MATCHES "Intel"))
            add_compile_definitions(GGML_BLAS_USE_MKL)
        endif()

        set(GGML_HEADERS_BLAS ../include/ggml-blas.h)
        set(GGML_SOURCES_BLAS ggml-blas.cpp)

        set(GGML_EXTRA_LIBS     ${GGML_EXTRA_LIBS}     ${BLAS_LIBRARIES})
        set(GGML_EXTRA_INCLUDES ${GGML_EXTRA_INCLUDES} ${BLAS_INCLUDE_DIRS})
    else()
        message(WARNING "BLAS not found, please refer to FindBLAS documentation")
    endif()
endif()

set (GGML_SOURCES_IQK iqk/iqk_quantize.cpp iqk/iqk_cpu_ops.cpp)
set (GGML_HEADERS_IQK iqk/iqk_config.h iqk/iqk_cpu_ops.h)
if (GGML_IQK_MUL_MAT)
    message(STATUS "Using optimized iqk matrix multiplications")
    add_compile_definitions(GGML_USE_IQK_MULMAT)
    set(GGML_SOURCES_IQK_MM iqk/iqk_mul_mat.cpp
                            iqk/iqk_flash_attn.cpp
                            iqk/fa/iqk_fa_576_512.cpp
                            iqk/fa/iqk_fa_192_128.cpp
                            iqk/fa/iqk_fa_192_192.cpp
                            iqk/fa/iqk_fa_256_256.cpp
                            iqk/fa/iqk_fa_128_128.cpp
                            iqk/fa/iqk_fa_96_96.cpp
                            iqk/fa/iqk_fa_64_64.cpp
                            iqk/iqk_gemm_floats.cpp
                            iqk/iqk_gemm_kquants.cpp
                            iqk/iqk_gemm_ktquants.cpp
                            iqk/iqk_gemm_iquants.cpp
                            iqk/iqk_gemm_iqk_quants.cpp
                            iqk/iqk_gemm_1bit.cpp
                            iqk/iqk_gemm_legacy_quants.cpp)
    set(GGML_HEADERS_IQK_MM iqk/iqk_mul_mat.h
                            iqk/iqk_flash_impl.h
                            iqk/fa/iqk_fa_templates.h
                            iqk/iqk_gemm_floats.h
                            iqk/iqk_gemm_kquants.h
                            iqk/iqk_gemm_ktquants.h
                            iqk/iqk_gemm_iquants.h
                            iqk/iqk_gemm_iqk_quants.h
                            iqk/iqk_gemm_1bit.h
                            iqk/iqk_gemm_legacy_quants.h)
    if (GGML_IQK_FLASH_ATTENTION)
        message(STATUS "Enabling IQK Flash Attention kernels")
        add_compile_definitions(GGML_IQK_FLASH_ATTENTION)
        if (GGML_IQK_FA_ALL_QUANTS)
            message(STATUS "Including all IQK FA kernels")
            add_compile_definitions(GGML_IQK_FA_ALL_QUANTS)
        endif()
    else()
        message(STATUS "Disabling IQK Flash Attention kernels")
    endif()
endif()

if (GGML_LLAMAFILE)
    message(STATUS "Using llamafile")

    add_compile_definitions(GGML_USE_LLAMAFILE)

    set(GGML_HEADERS_LLAMAFILE llamafile/sgemm.h)
    set(GGML_SOURCES_LLAMAFILE llamafile/sgemm.cpp)
endif()

#
# CUDA handling - with robust fallback if imported CUDA::* targets are not present
#
if (GGML_CUDA)
    # allow top-level to set minimum; ensure basic support for CUDA arch variables
    if (NOT DEFINED CMAKE_CUDA_ARCHITECTURES)
        set(CMAKE_CUDA_ARCHITECTURES "native" CACHE STRING "CUDA architectures")
    endif()

    # Prefer CUDAToolkit package (modern CMake) but be resilient if it doesn't provide named imported targets
    find_package(CUDAToolkit QUIET)

    if (CUDAToolkit_FOUND)
        message(STATUS "CUDA Toolkit found (CUDAToolkit package).")
        # note: CUDAToolkit may or may not define imported targets named CUDA::cudart CUDA::cublas etc.
        set(GGML_CUDA_TOOLKIT_ROOT ${CUDAToolkit_ROOT} CACHE PATH "CUDA Toolkit root from CUDAToolkit")
    else()
        # fallback to CUDA toolkit environment variables or default install paths
        if (DEFINED ENV{CUDA_PATH})
            set(GGML_CUDA_TOOLKIT_ROOT $ENV{CUDA_PATH})
        elseif (DEFINED ENV{CUDA_TOOLKIT_ROOT_DIR})
            set(GGML_CUDA_TOOLKIT_ROOT $ENV{CUDA_TOOLKIT_ROOT_DIR})
        else()
            # on Windows default install path
            if (WIN32)
                set(GGML_CUDA_TOOLKIT_ROOT "C:/Program Files/NVIDIA GPU Computing Toolkit/CUDA")
            endif()
        endif()
        message(WARNING "CUDAToolkit package not found via find_package. Falling back to CUDA root: ${GGML_CUDA_TOOLKIT_ROOT}")
    endif()

    # Try to detect cublas/cudart imported targets; otherwise locate libraries manually.
    set(GGML_CUDA_LIBS "")
    set(GGML_CUDA_INCLUDES "")

    # If CUDAToolkit provided imported targets, prefer them.
    if (TARGET CUDA::cudart)
        list(APPEND GGML_CUDA_LIBS CUDA::cudart)
    endif()
    if (TARGET CUDA::cublas)
        list(APPEND GGML_CUDA_LIBS CUDA::cublas)
    endif()
    if (TARGET CUDA::cublasLt)
        list(APPEND GGML_CUDA_LIBS CUDA::cublasLt)
    endif()
    if (TARGET CUDA::cuda_driver)
        list(APPEND GGML_CUDA_LIBS CUDA::cuda_driver)
    endif()

    # If any required target is missing, try to find the libraries by name/path
    if (GGML_CUDA_TOOLKIT_ROOT)
        # guess the typical include and lib locations
        if (NOT GGML_CUDA_INCLUDES)
            list(APPEND GGML_CUDA_INCLUDES
                "${GGML_CUDA_TOOLKIT_ROOT}/include"
                "${GGML_CUDA_TOOLKIT_ROOT}/targets/x86_64-linux/include"
            )
        endif()
        if (NOT GGML_CUDA_LIBS)
            # On Windows CUDA 12/13 consits of lib paths like .../lib/x64
            if (WIN32)
                set(_cuda_libdir "${GGML_CUDA_TOOLKIT_ROOT}/lib/x64")
            else()
                set(_cuda_libdir "${GGML_CUDA_TOOLKIT_ROOT}/lib64")
            endif()
            find_library(_ggml_cudart_LIB cudart HINTS ${_cuda_libdir} PATH_SUFFIXES lib lib64)
            find_library(_ggml_cublas_LIB cublas HINTS ${_cuda_libdir} PATH_SUFFIXES lib lib64)
            find_library(_ggml_cublasLt_LIB cublasLt HINTS ${_cuda_libdir} PATH_SUFFIXES lib lib64)
            find_library(_ggml_cuda_driver_LIB cuda HINTS ${_cuda_libdir} PATH_SUFFIXES lib lib64)
            if (_ggml_cudart_LIB)
                list(APPEND GGML_CUDA_LIBS ${_ggml_cudart_LIB})
            endif()
            if (_ggml_cublas_LIB)
                list(APPEND GGML_CUDA_LIBS ${_ggml_cublas_LIB})
            endif()
            if (_ggml_cublasLt_LIB)
                list(APPEND GGML_CUDA_LIBS ${_ggml_cublasLt_LIB})
            endif()
            if (_ggml_cuda_driver_LIB)
                list(APPEND GGML_CUDA_LIBS ${_ggml_cuda_driver_LIB})
            endif()
        endif()
    endif()

    # Last resort: try generic names (allow system linker to find them)
    if (NOT GGML_CUDA_LIBS)
        list(APPEND GGML_CUDA_LIBS cudart cublas cublasLt cuda)
    endif()

    # Try find cublas_v2.h on include paths (if not provided by find_package)
    if (NOT GGML_CUDA_INCLUDES)
        find_path(GGML_CUBLAS_INCLUDE cublas_v2.h HINTS
            "${GGML_CUDA_TOOLKIT_ROOT}/include"
            "${CUDAToolkit_ROOT}/include"
            "/usr/local/cuda/include"
            "/usr/include"
            NO_DEFAULT_PATH
        )
        if (GGML_CUBLAS_INCLUDE)
            list(APPEND GGML_CUDA_INCLUDES ${GGML_CUBLAS_INCLUDE})
        endif()
    endif()

    # Save variables for later linking
    set(GGML_DETECTED_CUDA_LIBS ${GGML_CUDA_LIBS} PARENT_SCOPE)
    set(GGML_DETECTED_CUDA_INCLUDES ${GGML_CUDA_INCLUDES} PARENT_SCOPE)

    # Add compile definitions for CUDA-enabled code
    list(APPEND GGML_CDEF_PUBLIC GGML_USE_CUDA)

    add_compile_definitions(GGML_CUDA_DMMV_X=${GGML_CUDA_DMMV_X})
    add_compile_definitions(GGML_CUDA_MMV_Y=${GGML_CUDA_MMV_Y})
    add_compile_definitions(K_QUANTS_PER_ITERATION=${GGML_CUDA_KQUANTS_ITER})
    add_compile_definitions(GGML_CUDA_PEER_MAX_BATCH_SIZE=${GGML_CUDA_PEER_MAX_BATCH_SIZE})
    add_compile_definitions(GGML_CUDA_MIN_BATCH_OFFLOAD=${GGML_CUDA_MIN_BATCH_OFFLOAD})
    add_compile_definitions(GGML_CUDA_FUSION=${GGML_CUDA_FUSION})

    if (GGML_CUDA_USE_GRAPHS)
        add_compile_definitions(GGML_CUDA_USE_GRAPHS)
    endif()

    if (GGML_CUDA_FORCE_DMMV)
        add_compile_definitions(GGML_CUDA_FORCE_DMMV)
    endif()

    if (GGML_CUDA_FORCE_MMQ)
        add_compile_definitions(GGML_CUDA_FORCE_MMQ)
    endif()

    if (GGML_CUDA_IQK_FORCE_BF16)
        add_compile_definitions(GGML_CUDA_IQK_FORCE_BF16)
    endif()

    if (GGML_CUDA_FORCE_CUBLAS)
        add_compile_definitions(GGML_CUDA_FORCE_CUBLAS)
    endif()

    if (GGML_CUDA_NO_VMM)
        add_compile_definitions(GGML_CUDA_NO_VMM)
    endif()

    if (GGML_CUDA_F16 OR GGML_CUDA_DMMV_F16)
        add_compile_definitions(GGML_CUDA_F16)
    endif()

    if (GGML_CUDA_NO_PEER_COPY)
        add_compile_definitions(GGML_CUDA_NO_PEER_COPY)
    endif()
endif()

if (GGML_HIPBLAS)
    # HIP/ROCm detection omitted here for brevity (mirror CUDA block if required)
endif()

if (GGML_SYCL)
    # SYCL detection (left unchanged)
endif()

if (GGML_RPC)
    message(STATUS "RPC found")

    list(APPEND GGML_CDEF_PUBLIC GGML_USE_RPC)

    if (WIN32)
        set(GGML_EXTRA_LIBS ${GGML_EXTRA_LIBS} ws2_32)
    endif()

    set(GGML_HEADERS_RPC ../include/ggml-rpc.h)
    set(GGML_SOURCES_RPC ggml-rpc.cpp)
endif()

function(detect_host_compiler)
    if (CMAKE_HOST_SYSTEM_NAME STREQUAL "Windows")
        find_program(HOST_C_COMPILER NAMES cl gcc clang NO_CMAKE_FIND_ROOT_PATH)
        find_program(HOST_CXX_COMPILER NAMES cl g++ clang++ NO_CMAKE_FIND_ROOT_PATH)
    else()
        find_program(HOST_C_COMPILER NAMES gcc clang NO_CMAKE_FIND_ROOT_PATH)
        find_program(HOST_CXX_COMPILER NAMES g++ clang++ NO_CMAKE_FIND_ROOT_PATH)
    endif()
    set(HOST_C_COMPILER "${HOST_C_COMPILER}" PARENT_SCOPE)
    set(HOST_CXX_COMPILER "${HOST_CXX_COMPILER}" PARENT_SCOPE)
endfunction()

if (GGML_VULKAN)
    find_package(Vulkan COMPONENTS glslc REQUIRED)

    if (Vulkan_FOUND)
        message(STATUS "Vulkan found")

        # shader tests omitted here for brevity, keep your earlier shader test functions...
        list(APPEND GGML_CDEF_PUBLIC GGML_USE_VULKAN)

        set(GGML_HEADERS_VULKAN ${CMAKE_CURRENT_SOURCE_DIR}/../include/ggml-vulkan.h ${_ggml_vk_header})
        set(GGML_SOURCES_VULKAN ggml-vulkan.cpp ${_ggml_vk_source})

        set(GGML_EXTRA_LIBS     ${GGML_EXTRA_LIBS} Vulkan::Vulkan)
        set(GGML_EXTRA_INCLUDES ${GGML_EXTRA_INCLUDES} ${CMAKE_CURRENT_BINARY_DIR})
    else()
        message(WARNING "Vulkan not found")
    endif()
endif()

if (GGML_KOMPUTE)
    # Kompute handling omitted here (keep as in upstream)
endif()

if (GGML_CPU_HBM)
    find_library(memkind memkind REQUIRED)

    message(STATUS "Using memkind for CPU HBM")

    add_compile_definitions(GGML_USE_CPU_HBM)

    target_link_libraries(ggml PUBLIC memkind)
endif()

if (GGML_CANN)
    # CANN handling omitted for brevity; keep your original code
endif()

function(get_flags CCID CCVER)
    set(C_FLAGS "")
    set(CXX_FLAGS "")

    if (CCID MATCHES "Clang")
        set(C_FLAGS   -Wunreachable-code-break -Wunreachable-code-return)
        set(CXX_FLAGS -Wunreachable-code-break -Wunreachable-code-return -Wmissing-prototypes -Wextra-semi)

        if (
            (CCID STREQUAL "Clang"      AND CCVER VERSION_GREATER_EQUAL 3.8.0) OR
            (CCID STREQUAL "AppleClang" AND CCVER VERSION_GREATER_EQUAL 7.3.0)
        )
            list(APPEND C_FLAGS -Wdouble-promotion)
        endif ()
    elseif (CCID STREQUAL "GNU")
        set(C_FLAGS   -Wdouble-promotion)
        set(CXX_FLAGS -Wno-array-bounds)

        if (NOT GGML_MUSA)
            if (CCVER VERSION_GREATER_EQUAL 7.1.0)
                list(APPEND CXX_FLAGS -Wno-format-truncation)
            endif()
        endif()
        if (CCVER VERSION_GREATER_EQUAL 8.1.0)
            list(APPEND CXX_FLAGS -Wextra-semi)
        endif()
    endif()

    set(GF_C_FLAGS   ${C_FLAGS}   PARENT_SCOPE)
    set(GF_CXX_FLAGS ${CXX_FLAGS} PARENT_SCOPE)
endfunction()

if (GGML_FATAL_WARNINGS)
    if (CMAKE_CXX_COMPILER_ID MATCHES "GNU" OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
        list(APPEND C_FLAGS   -Werror)
        list(APPEND CXX_FLAGS -Werror)
    elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
        add_compile_options(/WX)
    endif()
endif()

if (GGML_ALL_WARNINGS)
    if (NOT MSVC)
        list(APPEND WARNING_FLAGS -Wall -Wextra -Wpedantic -Wcast-qual -Wno-unused-function)
        if (APPLE)
            list(APPEND WARNING_FLAGS -Wno-c99-extensions)
        endif()
        list(APPEND C_FLAGS       -Wshadow -Wstrict-prototypes -Wpointer-arith -Wmissing-prototypes
                                  -Werror=implicit-int -Werror=implicit-function-declaration)
        list(APPEND CXX_FLAGS     -Wmissing-declarations -Wmissing-noreturn)

        list(APPEND C_FLAGS   ${WARNING_FLAGS})
        list(APPEND CXX_FLAGS ${WARNING_FLAGS})

        get_flags(${CMAKE_CXX_COMPILER_ID} ${CMAKE_CXX_COMPILER_VERSION})

        add_compile_options("$<$<COMPILE_LANGUAGE:C>:${C_FLAGS};${GF_C_FLAGS}>"
                            "$<$<COMPILE_LANGUAGE:CXX>:${CXX_FLAGS};${GF_CXX_FLAGS}>")
    else()
        set(C_FLAGS   "")
        set(CXX_FLAGS "")
    endif()
endif()

set(CUDA_CXX_FLAGS "")

if (GGML_CUDA)
    set(CUDA_FLAGS -use_fast_math -extended-lambda -lineinfo)

    if (GGML_FATAL_WARNINGS)
        list(APPEND CUDA_FLAGS -Werror all-warnings)
    endif()

    if (GGML_ALL_WARNINGS AND NOT MSVC)
        # Collect host compiler flags to pass via -Xcompiler for NVCC if needed.
        list(APPEND CUDA_CXX_FLAGS -Wno-pedantic)
    endif()

    if (NOT MSVC)
        list(APPEND CUDA_CXX_FLAGS -Wno-pedantic)
    endif()
endif()

if (GGML_LTO)
    include(CheckIPOSupported)
    check_ipo_supported(RESULT result OUTPUT output)
    if (result)
        set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
    else()
        message(WARNING "IPO is not supported: ${output}")
    endif()
endif()

if (GGML_CCACHE)
    find_program(GGML_CCACHE_FOUND ccache)

    if (GGML_CCACHE_FOUND)
        set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ccache)
        set(ENV{CCACHE_SLOPPINESS} time_macros)
        message(STATUS "ccache found, compilation results will be cached. Disable with GGML_CCACHE=OFF.")
    else()
        message(STATUS "Warning: ccache not found - consider installing it for faster compilation or disable this warning with GGML_CCACHE=OFF")
    endif ()
endif()

execute_process(
    COMMAND ${CMAKE_C_COMPILER} ${CMAKE_EXE_LINKER_FLAGS} -Wl,-v
    ERROR_VARIABLE output
    OUTPUT_QUIET
)

if (output MATCHES "dyld-1015\\.7")
    add_compile_definitions(HAVE_BUGGY_APPLE_LINKER)
endif()

message(STATUS "CMAKE_SYSTEM_PROCESSOR: ${CMAKE_SYSTEM_PROCESSOR}")
if (MSVC)
    string(TOLOWER "${CMAKE_GENERATOR_PLATFORM}" CMAKE_GENERATOR_PLATFORM_LWR)
    message(STATUS "CMAKE_GENERATOR_PLATFORM: ${CMAKE_GENERATOR_PLATFORM}")
else ()
    set(CMAKE_GENERATOR_PLATFORM_LWR "")
endif ()

set(ARCH_FLAGS ${GGML_ARCH_FLAGS})

# Architecture-specific flags (kept as upstream)
if ( ... ) # (the original architecture detection block remains unchanged)
    # For brevity in this paste, assume the upstream arch detection section follows here
endif()

add_compile_options("$<$<COMPILE_LANGUAGE:CXX>:${ARCH_FLAGS}>")
add_compile_options("$<$<COMPILE_LANGUAGE:C>:${ARCH_FLAGS}>")

if (GGML_CUDA)
    list(APPEND CUDA_CXX_FLAGS ${ARCH_FLAGS})
    list(JOIN   CUDA_CXX_FLAGS " " CUDA_CXX_FLAGS_JOINED)

    if (NOT CUDA_CXX_FLAGS_JOINED STREQUAL "")
        list(APPEND CUDA_FLAGS -Xcompiler ${CUDA_CXX_FLAGS_JOINED})
    endif()

    add_compile_options("$<$<COMPILE_LANGUAGE:CUDA>:${CUDA_FLAGS}>")
endif()

if (MINGW)
    add_compile_definitions(_WIN32_WINNT=${GGML_WIN_VER})
endif()

# POSIX conformance
add_compile_definitions(_XOPEN_SOURCE=600)
if (CMAKE_SYSTEM_NAME MATCHES "OpenBSD")
    remove_definitions(-D_XOPEN_SOURCE=600)
    add_compile_definitions(_XOPEN_SOURCE=700)
endif()
if (CMAKE_SYSTEM_NAME MATCHES "Linux")
    add_compile_definitions(_GNU_SOURCE)
endif()
if (CMAKE_SYSTEM_NAME MATCHES "Darwin" OR
    CMAKE_SYSTEM_NAME MATCHES "iOS"    OR
    CMAKE_SYSTEM_NAME MATCHES "tvOS"   OR
    CMAKE_SYSTEM_NAME MATCHES "DragonFly")
    add_compile_definitions(_DARWIN_C_SOURCE)
endif()
if (CMAKE_SYSTEM_NAME MATCHES "FreeBSD")
    add_compile_definitions(__BSD_VISIBLE)
endif()
if (CMAKE_SYSTEM_NAME MATCHES "NetBSD")
    add_compile_definitions(_NETBSD_SOURCE)
endif()
if (CMAKE_SYSTEM_NAME MATCHES "OpenBSD")
    add_compile_definitions(_BSD_SOURCE)
endif()

if (WIN32)
    add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
    if (BUILD_SHARED_LIBS)
        set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
    endif()
endif()

#
# libraries
#

# ggml core sources
set(GGML_CORE_SOURCES
    ../include/ggml.h
    ../include/ggml-alloc.h
    ../include/ggml-backend.h
    ggml.c
    ggml-alloc.c
    ggml-quants.c
    ggml-quants.h
    ggml-aarch64.c
)

# Add IQK implementation sources into ggml-base so quantize/vec_dot/iqk symbols
list(APPEND GGML_CORE_SOURCES ${GGML_SOURCES_IQK} ${GGML_SOURCES_IQK_MM})

# Add ggml-backend.cpp to core so ggml-base provides the backend API that
# core files (ggml-alloc.c, etc.) expect. The registration calls that call into
# CUDA/Vulkan/... live in ggml-backend-reg.cpp and are compiled into top-level ggml.
list(APPEND GGML_CORE_SOURCES ggml-backend.cpp)

# Optionally include IQK headers for IDE visibility (no effect on linking).
list(APPEND GGML_CORE_SOURCES ${GGML_HEADERS_IQK} ${GGML_HEADERS_IQK_MM})

# Ensure ggml-impl implementation (tables, utilities) ends up compiled into core.
if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/ggml-impl.c")
    list(APPEND GGML_CORE_SOURCES ggml-impl.c)
endif()
if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/ggml-impl.cpp")
    list(APPEND GGML_CORE_SOURCES ggml-impl.cpp)
endif()
if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/ggml-impl.cc")
    list(APPEND GGML_CORE_SOURCES ggml-impl.cc)
endif()

#
# Object library and base libs
#
add_library(ggml_base_objs OBJECT ${GGML_CORE_SOURCES})

target_compile_definitions(ggml_base_objs PUBLIC ${GGML_CDEF_PUBLIC})
target_compile_definitions(ggml_base_objs PRIVATE $<$<CONFIG:Release>:NDEBUG>)
target_include_directories(ggml_base_objs PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
    $<INSTALL_INTERFACE:include>
)
target_include_directories(ggml_base_objs PRIVATE . ${GGML_EXTRA_INCLUDES})
target_compile_features(ggml_base_objs PRIVATE c_std_11 cxx_std_17)

add_library(ggml-base-static STATIC $<TARGET_OBJECTS:ggml_base_objs>)
add_library(ggml-base SHARED $<TARGET_OBJECTS:ggml_base_objs>)

if (DEFINED GGML_VERSION)
    set_target_properties(ggml-base PROPERTIES
        VERSION ${GGML_VERSION}
        SOVERSION ${GGML_VERSION_MAJOR}
    )
    set_target_properties(ggml-base-static PROPERTIES
        VERSION ${GGML_VERSION}
        SOVERSION ${GGML_VERSION_MAJOR}
    )
endif()

if (EMSCRIPTEN)
    set_target_properties(ggml-base PROPERTIES COMPILE_FLAGS "-msimd128")
    set_target_properties(ggml-base-static PROPERTIES COMPILE_FLAGS "-msimd128")
endif()

target_include_directories(ggml-base PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
    $<INSTALL_INTERFACE:include>
)
target_compile_definitions(ggml-base PUBLIC ${GGML_CDEF_PUBLIC})
target_compile_definitions(ggml-base PRIVATE $<$<CONFIG:Release>:NDEBUG>)

target_compile_definitions(ggml-base-static PUBLIC ${GGML_CDEF_PUBLIC})
target_compile_definitions(ggml-base-static PRIVATE $<$<CONFIG:Release>:NDEBUG>)

if (BUILD_SHARED_LIBS)
    set_target_properties(ggml-base PROPERTIES POSITION_INDEPENDENT_CODE ON)
    set_target_properties(ggml-base-static PROPERTIES POSITION_INDEPENDENT_CODE ON)
endif()

# Link threading to core
find_package(Threads REQUIRED)
target_link_libraries(ggml-base PRIVATE Threads::Threads)
target_link_libraries(ggml-base-static PRIVATE Threads::Threads)

if (BUILD_SHARED_LIBS)
    target_compile_definitions(ggml-base PRIVATE GGML_BUILD)
    target_compile_definitions(ggml-base PUBLIC  GGML_SHARED)
endif()

# math lib
find_library(MATH_LIBRARY m)
if (MATH_LIBRARY)
    if (NOT WIN32 OR NOT GGML_SYCL)
        target_link_libraries(ggml-base PRIVATE ${MATH_LIBRARY})
        target_link_libraries(ggml-base-static PRIVATE ${MATH_LIBRARY})
    endif()
endif()

#
# ggml-cpu backend (non-CUDA backends)
#
add_library(ggml-cpu SHARED
    ${GGML_SOURCES_METAL}     ${GGML_HEADERS_METAL}
    ${GGML_SOURCES_RPC}       ${GGML_HEADERS_RPC}
    ${GGML_SOURCES_EXTRA}     ${GGML_HEADERS_EXTRA}
    ${GGML_SOURCES_SYCL}      ${GGML_HEADERS_SYCL}
    ${GGML_SOURCES_KOMPUTE}   ${GGML_HEADERS_KOMPUTE}
    ${GGML_SOURCES_VULKAN}    ${GGML_HEADERS_VULKAN}
    ${GGML_SOURCES_ROCM}      ${GGML_HEADERS_ROCM}
    ${GGML_SOURCES_BLAS}      ${GGML_HEADERS_BLAS}
    ${GGML_SOURCES_LLAMAFILE} ${GGML_HEADERS_LLAMAFILE}
    ${GGML_SOURCES_CANN}      ${GGML_HEADERS_CANN}
)

target_include_directories(ggml-cpu PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
    $<INSTALL_INTERFACE:include>
)
target_include_directories(ggml-cpu PRIVATE . ${GGML_EXTRA_INCLUDES})
target_compile_definitions(ggml-cpu PUBLIC ${GGML_CDEF_PUBLIC})
target_compile_definitions(ggml-cpu PRIVATE $<$<CONFIG:Release>:NDEBUG>)

if (BUILD_SHARED_LIBS)
    set_target_properties(ggml-cpu PROPERTIES POSITION_INDEPENDENT_CODE ON)
endif()

# --- IMPORTANT: link CPU backend against the STATIC core to resolve implementation/data symbols.
# This fixes unresolved externals like ggml_table_f32_f16 which are defined in implementation files.
target_link_libraries(ggml-cpu PUBLIC ggml-base-static)
target_link_libraries(ggml-cpu PRIVATE ${GGML_EXTRA_LIBS})
target_link_directories(ggml-cpu PRIVATE ${GGML_EXTRA_LIBDIRS})

if (CMAKE_SYSTEM_NAME MATCHES "Linux")
    target_link_libraries(ggml-cpu PRIVATE dl)
endif()

#
# ggml-cuda backend (only when CUDA is enabled)
#
if (GGML_CUDA)
    add_library(ggml-cuda SHARED
        ${GGML_SOURCES_CUDA} ${GGML_HEADERS_CUDA}
    )

    if (DEFINED GGML_VERSION)
        set_target_properties(ggml-cuda PROPERTIES
            VERSION ${GGML_VERSION}
            SOVERSION ${GGML_VERSION_MAJOR}
        )
    endif()

    target_include_directories(ggml-cuda PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
        $<INSTALL_INTERFACE:include>
    )
    target_include_directories(ggml-cuda PRIVATE . ${GGML_EXTRA_INCLUDES})

    # add detected cuda include paths if any
    if (GGML_DETECTED_CUDA_INCLUDES)
        target_include_directories(ggml-cuda PRIVATE ${GGML_DETECTED_CUDA_INCLUDES})
    endif()

    target_compile_definitions(ggml-cuda PUBLIC ${GGML_CDEF_PUBLIC})
    target_compile_definitions(ggml-cuda PRIVATE $<$<CONFIG:Release>:NDEBUG>)

    if (BUILD_SHARED_LIBS)
        set_target_properties(ggml-cuda PROPERTIES POSITION_INDEPENDENT_CODE ON)
    endif()

    if(MSVC)
        set_target_properties(ggml-cuda PROPERTIES
            CUDA_STANDARD 17
            CUDA_STANDARD_REQUIRED ON
        )
    endif()

    # Link CUDA backend against the SHARED core to avoid huge DLL sizes on Windows.
    # ggml-cuda still needs access to core headers; implementation symbols should be
    # available via the shared ggml-base when built this way. If you run into
    # unresolved symbols for CUDA, consider alternative solutions (split large files,
    # export the implementation from ggml-base, or switch to ggml-base-static keeping an
    # eye on DLL size).
    target_link_libraries(ggml-cuda PUBLIC ggml-base)
    target_link_libraries(ggml-cuda PRIVATE ${GGML_EXTRA_LIBS})
    target_link_directories(ggml-cuda PRIVATE ${GGML_EXTRA_LIBDIRS})

    # Link to CUDA libraries detected earlier (robust: may contain imported targets or full paths or names)
    if (GGML_DETECTED_CUDA_LIBS)
        foreach(_lib IN LISTS GGML_DETECTED_CUDA_LIBS)
            # if it's an imported target, link it; otherwise pass it to linker
            if (TARGET ${_lib})
                target_link_libraries(ggml-cuda PRIVATE ${_lib})
            else()
                target_link_libraries(ggml-cuda PRIVATE ${_lib})
            endif()
        endforeach()
    endif()

    if (CMAKE_SYSTEM_NAME MATCHES "Linux")
        target_link_libraries(ggml-cuda PRIVATE dl)
    endif()
endif()

#
# top-level ggml library: glue that consumers link to (registration entrypoint)
#
add_library(ggml ggml-backend-reg.cpp)
add_library(ggml::ggml ALIAS ggml)

if (DEFINED GGML_VERSION)
    set_target_properties(ggml PROPERTIES
        VERSION ${GGML_VERSION}
        SOVERSION ${GGML_VERSION_MAJOR}
    )
endif()

target_include_directories(ggml PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
    $<INSTALL_INTERFACE:include>
)
target_compile_features(ggml PRIVATE c_std_11 cxx_std_17)

# ggml links the core API (shared)
target_link_libraries(ggml PUBLIC ggml-base)

# ensure backends are linked so symbols like ggml_backend_cuda_init are available
# (ordering: link cpu, then cuda if present)
target_link_libraries(ggml PUBLIC ggml-cpu)
if (GGML_CUDA)
    target_link_libraries(ggml PUBLIC ggml-cuda)
endif()

if (CMAKE_SYSTEM_NAME MATCHES "Linux")
    target_link_libraries(ggml PRIVATE dl)
endif()

if (BUILD_SHARED_LIBS)
    target_compile_definitions(ggml-base PRIVATE GGML_BUILD)
    target_compile_definitions(ggml-base PUBLIC  GGML_SHARED)

    target_compile_definitions(ggml-cpu PRIVATE GGML_BUILD)
    target_compile_definitions(ggml-cpu PUBLIC  GGML_SHARED)

    if (GGML_CUDA)
        target_compile_definitions(ggml-cuda PRIVATE GGML_BUILD)
        target_compile_definitions(ggml-cuda PUBLIC  GGML_SHARED)
    endif()

    target_compile_definitions(ggml PRIVATE GGML_BUILD)
    target_compile_definitions(ggml PUBLIC  GGML_SHARED)
endif()

# final math library linking (repeat to ensure static lib has math)
if (MATH_LIBRARY)
    if (NOT WIN32 OR NOT GGML_SYCL)
        target_link_libraries(ggml-base PRIVATE ${MATH_LIBRARY})
        target_link_libraries(ggml-base-static PRIVATE ${MATH_LIBRARY})
    endif()
endif()
